Ansible_k8s_task8/roles/jenkins_k8s/files/jenkins.yml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: jenkins-dep
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: jenkins
    spec:
      securityContext:
        fsGroup: 993
      containers:
      - name: jenkins
        image: jenkins/jenkins
        resources:
          requests:
            cpu: 500m
            memory: 1024Mi
          limits:
            cpu: 2000m
            memory: 2048Mi
        ports:
        - name: jen-port1
          containerPort: 8080
        - name: jen-port2
          containerPort: 50000
        volumeMounts:
        - name: jenkins-dep-volume
          mountPath: /var/jenkins_home
        - name: docker-sock
          mountPath: /var/run/docker.sock
      volumes:
      - name: jenkins-dep-volume
        persistentVolumeClaim:
          claimName: localvolume-pvc
      - name: docker-sock
        hostPath:
          path: /var/run/docker.sock
---

apiVersion: v1
kind: Service
metadata:
  name: jenkins-svc
spec:
  selector:
    app: jenkins
  ports:
  - name: jen-svc-port1
    port: 8080
    targetPort: jen-port1
  - name: jen-svc-port2
    port: 50000
    targetPort: jen-port2
---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: jenkins
    http:
      paths:
      - path: /
        backend:
          serviceName: jenkins-svc
          servicePort: jen-svc-port1
